@@ -17,3 +17,4 @@
 <!ENTITY gmail-buton-signsend-checkbox "Sign and Send">
 <!ENTITY gmail-buton-crypt-checkbox "Crypt">
 <!ENTITY gmail-buton-cryptsend-checkbox "Crypt and Send">
+<!ENTITY allvays-to-myself-checkbox "Allvays encrypt to myself.">
